--- a/custom-addons/hr_salary_increment/views/hr_salary_increment_view.xml
+++ b/custom-addons/hr_salary_increment/views/hr_salary_increment_view.xml
@@ -95,4 +95,12 @@
         </field>
     </record>
 
+    <record id="salary_increment_report" model="ir.actions.report">
+        <field name="name">Salary Increment</field>
+        <field name="model">hr.salary.increment.batch</field>
+        <field name="report_type">qweb-pdf</field>
+        <field name="report_name">test</field>
+        <field name="binding_model_id" ref="base.model_report_paperformat" />
+    </record>
+
 </odoo>
